<resources>
    <string name="app_name">Projekat5.0</string>
    <string name="editText">Lokacija za prikaz vremenske prognoze:</string>
    <string name="naslov">Vremenska prognoza 5.0</string>
    <string name="dugme">Dodaj</string>
    <string name="textViewPageTwo1">Lokacija:</string>
    <string name="textViewPageTwo2">Dan:</string>
    <string name="pageTwoButtonOne">Temperatura</string>
    <string name="pageTwoButtonTwo">Izlazak i zalazak sunca</string>
    <string name="pageTwoButtonThree">Vetar</string>
    <string name="dropDownListTextView">Jedinica:</string>
    <string name="temperatura">Temperatura:</string>
    <string name="pritisak">Pritisak:</string>
    <string name="vlaznostVazduha">Vlaznost vazduha:</string>
    <string name="sunRises">Izlazak sunca:</string>
    <string name="Sunset">Zalazak sunca:</string>
    <string name="dummySunSet">17:30</string>
    <string name="wind">Brzina vetra:</string>
    <string name="dummyWindSpeed">5.0</string>
    <string name="windDirection">Pravac:</string>
    <string name="dummyWindDirection">S</string>
    <string name="editTextPageOne">unesi grad</string>
    <string name="imageSun">sunimage</string>
    <string name="rowElementButtonDelete">Obrisi</string>
    <string name="lastUpdateTextView">(Last update)</string>
    <string name="statistikaButton">Statistika</string>
    <string name="poslednjaNedelaTextView">Poslednja nedelja:</string>
    <string name="dan">Dan</string>
    <string name="vlaznost">Vlaznost</string>
    <string name="ponedeljak">Ponedeljak</string>
    <string name="utorak">Utorak</string>
    <string name="sreda">Sreda</string>
    <string name="cetvrtak">Cetvrtak</string>
    <string name="petak">Petak</string>
    <string name="subota">Subota</string>
    <string name="min_temperatura">Min temperatura:</string>
    <string name="max_temperatura">Max temperatura:</string>
    <string name="prvi_put">Prvi put:</string>
    <string name="grad">Grad:</string>
    <string name="datum">Datum:</string>
    <string name="izlazak">Izlazak:</string>
    <string name="zalazak">Zalazak:</string>
    <string name="brzina">Brzina:</string>
</resources>
