<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PageStatistika"
    android:background="@color/backgroundColor"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gradTextViewStatistika"
        android:textSize="42dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="Novi sad"
        android:textColor="@color/textColorMain"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poslednjaNedelaTextView"
        android:layout_marginTop="10dp"
        android:textSize="24dp"
        android:textColor="@color/textColorMain"
        android:layout_marginStart="10dp"/>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1,2,3,"
        android:gravity="center">
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/dan"
                android:textSize="14sp"
                android:textColor="@color/textColorMain"
                android:layout_column="0"
                android:textStyle="bold"
                android:gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:text="@string/temperatura"
                android:textColor="@color/textColorMain"
                android:layout_column="1"
                android:gravity="center"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:text="@string/pritisak"
                android:textColor="@color/textColorMain"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_column="2"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:text="@string/vlaznost"
                android:textColor="@color/textColorMain"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_column="2"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:text="@string/ponedeljak"
                android:textColor="@color/textColorMain"
                android:id="@+id/tableDanPonedeljak"
                android:layout_column="0"
                android:gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:textColor="@color/textColorMain"
                android:id="@+id/tableTemperaturaPonedeljak"
                android:layout_column="1"
                android:gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/textColorMain"
                android:textSize="14sp"
                android:id="@+id/tablePritisakPonedeljak"
                android:gravity="center"
                android:layout_column="2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:textColor="@color/textColorMain"
                android:id="@+id/tableVlaznstPonedeljak"
                android:gravity="center"
                android:layout_column="3" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:textColor="@color/textColorMain"
                android:text="@string/utorak"
                android:id="@+id/tableDanUtorak"
                android:layout_column="0"
                android:gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:textColor="@color/textColorMain"
                android:id="@+id/tableTemperaturaUtorak"
                android:layout_column="1"
                android:gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/textColorMain"
                android:textSize="14sp"
                android:id="@+id/tablePritisakUtorak"
                android:gravity="center"
                android:layout_column="2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/textColorMain"
                android:textSize="14sp"
                android:id="@+id/tableVlaznstUtorak"
                android:gravity="center"
                android:layout_column="3" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:textColor="@color/textColorMain"
                android:text="@string/sreda"
                android:id="@+id/tableDanSreda"
                android:layout_column="0"
                android:gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/textColorMain"
                android:textSize="14sp"
                android:id="@+id/tableTemperaturaSreda"
                android:layout_column="1"
                android:gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/textColorMain"
                android:textSize="14sp"
                android:id="@+id/tablePritisakSreda"
                android:gravity="center"
                android:layout_column="2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/textColorMain"
                android:textSize="14sp"
                android:id="@+id/tableVlaznstSreda"
                android:gravity="center"
                android:layout_column="3" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:textColor="@color/textColorMain"
                android:text="@string/cetvrtak"
                android:id="@+id/tableDanCetvrtak"
                android:layout_column="0"
                android:gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/textColorMain"
                android:textSize="14sp"
                android:id="@+id/tableTemperaturaCetvrtak"
                android:layout_column="1"
                android:gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:textColor="@color/textColorMain"
                android:id="@+id/tablePritisakCetvrtak"
                android:gravity="center"
                android:layout_column="2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/textColorMain"
                android:textSize="14sp"
                android:id="@+id/tableVlaznstCetvrtak"
                android:gravity="center"
                android:layout_column="3" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:textColor="@color/textColorMain"
                android:text="@string/petak"
                android:id="@+id/tableDanPetak"
                android:layout_column="0"
                android:gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:textColor="@color/textColorMain"
                android:id="@+id/tableTemperaturaPetak"
                android:layout_column="1"
                android:gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:textColor="@color/textColorMain"
                android:id="@+id/tablePritisakPetak"
                android:gravity="center"
                android:layout_column="2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:textColor="@color/textColorMain"
                android:id="@+id/tableVlaznstPetak"
                android:gravity="center"
                android:layout_column="3" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:textColor="@color/textColorMain"
                android:text="@string/subota"
                android:id="@+id/tableDanSubota"
                android:layout_column="0"
                android:gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/textColorMain"
                android:textSize="14sp"
                android:id="@+id/tableTemperaturaSubota"
                android:layout_column="1"
                android:gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:textColor="@color/textColorMain"
                android:id="@+id/tablePritisakSubota"
                android:gravity="center"
                android:layout_column="2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/textColorMain"
                android:textSize="14sp"
                android:id="@+id/tableVlaznstSubota"
                android:gravity="center"
                android:layout_column="3" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:textColor="@color/textColorMain"
                android:text="Nedelja"
                android:id="@+id/tableDanNedelja"
                android:layout_column="0"
                android:gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/textColorMain"
                android:textSize="14sp"
                android:id="@+id/tableTemperaturaNedelja"
                android:layout_column="1"
                android:gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:textColor="@color/textColorMain"
                android:id="@+id/tablePritisakNedelja"
                android:gravity="center"
                android:layout_column="2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:textColor="@color/textColorMain"
                android:id="@+id/tableVlaznstNedelja"
                android:gravity="center"
                android:layout_column="3" />

        </TableRow>

    </TableLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/textColorMain"
        android:text="@string/min_temperatura"
        android:id="@+id/minTemperatura"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/textColorMain"
        android:text="@string/max_temperatura"
        android:id="@+id/maxTemperatura"
        android:textSize="20sp"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <ImageButton
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/snowflakeButtonStatistika"
        android:background="@drawable/snowflakes"/>

    <ImageButton
        android:layout_marginTop="10dp"
        android:layout_marginStart="190dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/sunButtonStatistika"
        android:background="@drawable/icons"/>
</LinearLayout>
</LinearLayout>